--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,14 +1,47 @@
-name: CI
+name: Gawe for .NET
 
-on: workflow_call
+on:
+  workflow_call:
+    inputs:
+      os:
+        description: Operating System
+        type: string
+        required: true
+        default: ubuntu-latest
+      configuration:
+        description: dotnet build configuration
+        type: string
+        required: true
+        default: Release
 
 jobs:
   build:
-  
-    runs-on: ubuntu-latest
+    name: Build ${{ inputs.configuration }} on ${{ inputs.os }}
+    runs-on: ${{ inputs.os }}
 
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
           submodules: recursive
+      - name: Setup .NET Core SDK
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 6.0.x
+      - name: Install dependencies
+        run: dotnet restore
+      - name: Build
+        run: dotnet build --configuration ${{ inputs.configuration }} --no-restore
+      - name: Test
+        run: dotnet test --configuration ${{ inputs.configuration }} --no-restore --verbosity normal
+        
+  dependabot:
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' && github.actor == 'dependabot[bot]'
+    env:
+      PR_URL: ${{github.event.pull_request.html_url}}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - name: Automatically merge the Dependabot PRs
+        run: gh pr merge --auto -r "$PR_URL"
