--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,6 +28,16 @@ jobs:
         run: dotnet build --configuration ${{ matrix.configuration }} --no-restore
       - name: Test
         run: dotnet test --configuration ${{ matrix.configuration }} --no-restore --verbosity normal
+      - name: Create NuGet package
+        if: github.event_name == 'push' && matrix.os == 'ubuntu-latest'
+        run: dotnet pack -o __out__
+      - name: Upload build artifact
+        if: github.event_name == 'push' && matrix.os == 'ubuntu-latest'
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ github.event.repository.name }}-${{ github.sha }}
+          path: |
+            __out__/*.*nupkg
         
   dependabot:
     needs: [dotnet]
