--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,10 +44,10 @@ jobs:
     name: Auto-merge pull requests
     needs: [dotnet]
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && (github.actor == github.repository_owner || github.actor == 'dependabot[bot]')
+    if: github.event_name == 'pull_request' && (github.actor == 'Ali-p1986' || github.actor == github.repository_owner || github.actor == 'dependabot[bot]')
     env:
       PR_URL: ${{github.event.pull_request.html_url}}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Automatically merge the trusted PR from ${{ github.actor }}
-        run: gh pr merge --auto -r "$PR_URL"
+        run: gh pr merge --auto -d -r "$PR_URL"
