--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -51,3 +51,18 @@ jobs:
     steps:
       - name: Automatically merge the trusted PR from ${{ github.actor }}
         run: gh pr merge --auto -d -r "$PR_URL"
+
+  deploy:
+    name: Deploy NuGet package
+    needs: [dotnet]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: ${{ github.event.repository.name }}-${{ github.sha }}
+      - name: Deploy Github package
+        run: |
+          dotnet nuget add source --username SAPTeamDEV --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/SAPTeam/index.json"
+          dotnet nuget push -s github *.*nupkg
+      
