--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -67,6 +67,6 @@ jobs:
           name: ${{ github.event.repository.name }}-${{ github.sha }}
       - name: Deploy Github package
         run: |
-          dotnet nuget add source --username SAPTeamDEV --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/SAPTeam/index.json"
-          dotnet nuget push *.*nupkg --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
+          dotnet nuget add source --username SAPTeamDEV --password ${{ secrets.USER_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/SAPTeam/index.json"
+          dotnet nuget push *.*nupkg --api-key ${{ secrets.USER_TOKEN }} --source "github"
       
