--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,10 +2,6 @@ name: Gawe for .NET
 
 on:
   workflow_call:
-    secrets:
-      USER_TOKEN:
-        description: Github user token
-        required: true
 
 jobs:
   dotnet:
@@ -67,6 +63,6 @@ jobs:
           name: ${{ github.event.repository.name }}-${{ github.sha }}
       - name: Deploy Github package
         run: |
-          dotnet nuget add source --username SAPTeamDEV --password ${{ secrets.USER_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/SAPTeam/index.json"
-          dotnet nuget push *.*nupkg --api-key ${{ secrets.USER_TOKEN }} --source "github"
+          dotnet nuget add source --username ${{ github.repository_owner }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
+          dotnet nuget push *.*nupkg --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
       
