--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,6 +8,11 @@ on:
         type: boolean
         default: true
         required: false
+      nuget-deploy-branch:
+        description: Determines the release branch for NuGet packages
+        type: string
+        required: false
+        default: master
       trusted-user:
           description: Name of the trusted account for auto-merge the PRs
           type: string
@@ -46,10 +51,10 @@ jobs:
         run: dotnet test --configuration ${{ matrix.configuration }} --no-restore --verbosity normal
       # Initialize for CD
       - name: Create NuGet package
-        if: matrix.os == 'ubuntu-latest' && matrix.configuration == 'Release' && (github.event_name == 'push' || github.event_name == 'tag')
+        if: matrix.os == 'ubuntu-latest' && matrix.configuration == 'Release' && github.event_name == 'push'
         run: dotnet pack --configuration ${{ matrix.configuration }} --no-build -o __out__
       - name: Upload build artifact
-        if: matrix.os == 'ubuntu-latest' && matrix.configuration == 'Release' && (github.event_name == 'push' || github.event_name == 'tag')
+        if: matrix.os == 'ubuntu-latest' && matrix.configuration == 'Release' && github.event_name == 'push'
         uses: actions/upload-artifact@v3
         with:
           name: ${{ github.event.repository.name }}-${{ github.sha }}
@@ -72,7 +77,7 @@ jobs:
     name: Deploy NuGet package
     needs: [dotnet]
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event_name == 'tag'
+    if: github.event_name == 'push'
     steps:
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v3
@@ -82,13 +87,12 @@ jobs:
         with:
           name: ${{ github.event.repository.name }}-${{ github.sha }}
       - name: Deploy to Github packages
-        if: github.event_name == 'push'
         run: |
           dotnet nuget add source --username ${{ github.repository_owner }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
           dotnet nuget push *.*nupkg --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
         shell: bash
       - name: Deploy to NuGet gallery
-        if: github.event_name == 'tag'
+        if: inputs.nuget-deploy && github.ref_name == inputs.nuget-deploy-branch
         run: dotnet nuget push *.*nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source "nuget.org"
         shell: bash
         
