--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -87,12 +87,14 @@ jobs:
         with:
           name: ${{ github.event.repository.name }}-${{ github.sha }}
       - name: Deploy to Github packages
+        continue-on-error: true
         run: |
           dotnet nuget add source --username ${{ github.repository_owner }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
           dotnet nuget push *.*nupkg --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
         shell: bash
       - name: Deploy to NuGet gallery
         if: inputs.nuget-deploy && github.ref_name == inputs.nuget-deploy-branch
+        continue-on-error: true
         run: dotnet nuget push *.*nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source "nuget.org"
         shell: bash
         
