--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -51,10 +51,10 @@ jobs:
         run: dotnet test --configuration ${{ matrix.configuration }} --no-restore --verbosity normal
       # Initialize for CD
       - name: Create NuGet package
-        if: matrix.os == 'ubuntu-latest' && matrix.configuration == 'Release' && github.event_name == 'push'
+        if: matrix.os == 'ubuntu-latest' && matrix.configuration == 'Release' && github.event_name != 'pull_request'
         run: dotnet pack --configuration ${{ matrix.configuration }} --no-build -o __out__
       - name: Upload build artifact
-        if: matrix.os == 'ubuntu-latest' && matrix.configuration == 'Release' && github.event_name == 'push'
+        if: matrix.os == 'ubuntu-latest' && matrix.configuration == 'Release' && github.event_name != 'pull_request'
         uses: actions/upload-artifact@v3
         with:
           name: ${{ github.event.repository.name }}-${{ github.sha }}
@@ -77,7 +77,7 @@ jobs:
     name: Deploy NuGet package
     needs: [dotnet]
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+    if: github.event_name != 'pull_request'
     steps:
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v3
