Disable auto-delete merged branches
Signed-off-by: Ali-p1986 <131697486+Ali-p1986@users.noreply.github.com>

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -71,7 +71,7 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Automatically merge the trusted PR from ${{ github.actor }}
-        run: gh pr merge --auto -r -d "$PR_URL"
+        run: gh pr merge --auto -r "$PR_URL"
 
   deploy:
     name: Deploy NuGet package
