Update default values for paths
Signed-off-by: Ali-p1986 <131697486+Ali-p1986@users.noreply.github.com>

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,12 +12,12 @@ on:
         description: Solution or project file(s) to test
         required: false
         type: string
-        default: '*.sln'
+        default: ${{ inputs.build-path }}
       deploy-path:
         description: Solution or project file(s) to create and deploy packages
         required: false
         type: string
-        default: '*.sln'
+        default: ${{ inputs.build-path }}
       nuget-deploy:
         description: Deploy generated packages to the NuGet galley
         type: boolean
