--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,12 +12,12 @@ on:
         description: Solution or project file(s) to test
         required: false
         type: string
-        default: ${{ inputs.build-path }}
+        default: '*.sln'
       deploy-path:
         description: Solution or project file(s) to create and deploy packages
         required: false
         type: string
-        default: ${{ inputs.build-path }}
+        default: '*.sln'
       nuget-deploy:
         description: Deploy generated packages to the NuGet galley
         type: boolean
