Fix a logical bug
Signed-off-by: Ali-p1986 <131697486+Ali-p1986@users.noreply.github.com>

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -144,7 +144,7 @@ jobs:
           path: packs
       - name: Check artifacts
         run: |
-          [ -d packs ] && [ -f packs/*.*nupkg ] && echo "DO_DEPLOY==false" >> "$GITHUB_ENV"
+          [ -d packs ] && [ -f packs/*.*nupkg ] || echo "DO_DEPLOY==false" >> "$GITHUB_ENV"
       - name: Deploy to Github packages
         if: env.DO_DEPLOY == 'true'
         continue-on-error: true
