--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -149,11 +149,9 @@ jobs:
         if: env.DO_DEPLOY == 'true'
         continue-on-error: true
         run: |
-          dotnet nuget add source --username ${{ github.repository_owner }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
-
           for TARGET in packs/*.*nupkg
           do
-            dotnet nuget push $TARGET --api-key ${{ secrets.GITHUB_TOKEN }} --source "github" --skip-duplicate
+            dotnet nuget push $TARGET --api-key ${{ secrets.GITHUB_TOKEN }} --source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" --skip-duplicate
           done
         shell: bash
       - name: Deploy to NuGet gallery
