--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -68,7 +68,9 @@ jobs:
         with:
           dotnet-version: 6.0.x
       - name: Install dependencies
-        run: dotnet restore
+        run: |
+          dotnet restore
+          [ ${{ github.event.repository.name }} == AndroCtrl.Adb ] && [ $RUNNER_OS == macOS ] && brew install mono-libgdiplus
       - name: Build
         run: |
           for TARGET in ${{ inputs.build-path }}
