--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Install dependencies
         run: |
           dotnet restore
-          [ ${{ github.event.repository.name }} == AndroCtrl.Adb ] && [ $RUNNER_OS == macOS ] && brew install mono-libgdiplus
+          [ ${{ github.event.repository.name }} == AndroCtrl.Adb ] && [ ${{ matrix.os }} == macos ] && brew install mono-libgdiplus
       - name: Build
         run: |
           for TARGET in ${{ inputs.build-path }}
