Change condition layout
Signed-off-by: Ali-p1986 <131697486+Ali-p1986@users.noreply.github.com>

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -70,7 +70,10 @@ jobs:
       - name: Install dependencies
         run: |
           dotnet restore
-          [ ${{ github.event.repository.name }} == AndroCtrl.Adb ] && [ ${{ matrix.os }} == macos ] && brew install mono-libgdiplus
+          if [ ${{ github.event.repository.name }} == AndroCtrl.Adb ] && [ ${{ matrix.os }} == macos ]
+          then
+            brew install mono-libgdiplus
+          fi
       - name: Build
         run: |
           for TARGET in ${{ inputs.build-path }}
