--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -79,10 +79,6 @@ jobs:
           for TARGET in ${{ inputs.build-path }}
           do
             dotnet build $TARGET --configuration ${{ matrix.configuration }} --no-restore
-            if [ $? != 0 ]
-            then
-              exit 1
-            fi
           done
         shell: bash
       - name: Test
@@ -90,10 +86,6 @@ jobs:
           for TARGET in ${{ inputs.test-path }}
           do
             dotnet test $TARGET --configuration ${{ matrix.configuration }} --no-restore --verbosity normal
-            if [ $? != 0 ]
-            then
-              exit 1
-            fi
           done
         shell: bash
       # Initialize CD
@@ -103,10 +95,6 @@ jobs:
           for TARGET in ${{ inputs.deploy-path }}
             do
             dotnet pack $TARGET --configuration ${{ matrix.configuration }} --no-build -o __out__
-              if [ $? != 0 ]
-              then
-                exit 1
-              fi
             done
         shell: bash
       - name: Upload build artifact
@@ -149,7 +137,7 @@ jobs:
           path: packs
       - name: Check artifacts
         run: |
-          [ -d packs ] && [ -f packs/*.*nupkg ] || echo "DO_DEPLOY==false" >> "$GITHUB_ENV"
+          [ -d packs ] && [ "$(ls -A packs)" ] || echo "DO_DEPLOY==false" >> "$GITHUB_ENV"
       - name: Deploy to Github packages
         if: env.DO_DEPLOY == 'true'
         continue-on-error: true
