--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -153,7 +153,7 @@ jobs:
         uses: actions/download-artifact@v4
         continue-on-error: true
         with:
-          name: ${{ github.event.repository.name }}-${{ github.sha }}
+          name: ${{ github.event.repository.name }}-Packages-${{ github.sha }}
           path: packs
       - name: Check artifacts
         run: |
