Remove windows and mac runners as they slows down the ci performance
Signed-off-by: Alireza Poodineh <itsaeliux@gmail.com>

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -55,7 +55,7 @@ jobs:
   dotnet:
     strategy:
       matrix:
-        os: [windows, ubuntu, macos]
+        os: [ubuntu]
         configuration: [Debug, Release]
 
     name: Build ${{ matrix.configuration }} on ${{ matrix.os }}
